--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		    <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Playfair+Display:bold,bolditalic">
-		  <link rel="icon" href="" type="image/logo.png">
+		<link rel="icon" type="image/jpg" href="img/logo.jpg">
+
 		<style>
 			body {
 				display: flex;
