--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<main id="main">
 				<article>
 					<h1>La taverna del buongustaio</h1>
-					<a href="http://tavernalimongi/" id="btnOrder">Ordina</a>
+					<a href="http://tavernalimongi" id="btnOrder">Ordina</a>
 					<p id="orderAl">*E' possibile ordinare solo all'interno del locale</p>
 				</article>
 				
