--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<style>
 			body {
 				display: flex;
-				background-image: url('img/background.png');
+				background-image: url('img/background.jpg');
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
